[gd_scene load_steps=18 format=2]

[ext_resource path="res://Fonts/PatrickHand-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Interface/CustomizeContainer.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Interface_scenes/btn_theme_style.tres" type="StyleBox" id=3]
[ext_resource path="res://sprites/Interface/slider/slider_graber_higjlight.png" type="Texture" id=4]
[ext_resource path="res://sprites/Interface/slider/slider_graber_normal.png" type="Texture" id=5]
[ext_resource path="res://sprites/Interface/checkbox/checkbox_pressed.png" type="Texture" id=6]
[ext_resource path="res://sprites/Interface/checkbox/checkbox_normal.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Interface_scenes/CustomizeBGContainer.tscn" type="PackedScene" id=8]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0, 0, 0, 0 )
border_color = Color( 1, 1, 1, 1 )
border_blend = true
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="DynamicFont" id=2]
size = 10
extra_spacing_top = -2
extra_spacing_bottom = -2
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 6
extra_spacing_top = -2
extra_spacing_bottom = -2
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxLine" id=4]
color = Color( 1, 1, 1, 0.392157 )
grow_begin = -1.0
grow_end = -3.0

[sub_resource type="StyleBoxLine" id=5]
color = Color( 1, 1, 1, 1 )
grow_begin = -1.0
grow_end = -3.0

[sub_resource type="StyleBoxLine" id=6]
color = Color( 1, 1, 1, 1 )
grow_begin = -1.0
grow_end = -3.0

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 56, 45 )

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="DynamicFont" id=9]
size = 6
extra_spacing_top = -2
extra_spacing_bottom = -2
font_data = ExtResource( 1 )

[node name="CustomizeContainer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Control" parent="."]
margin_right = 106.0
margin_bottom = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -29.5262
margin_top = -73.5
margin_right = 57.4738
margin_bottom = 73.5
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackToMenu" type="Button" parent="Buttons/VBoxContainer"]
margin_right = 97.0
margin_bottom = 15.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Menu ->"

[node name="BackFromPlayer" type="Button" parent="Buttons/VBoxContainer"]
visible = false
margin_top = 20.0
margin_right = 97.0
margin_bottom = 35.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "<- Back"

[node name="Themes" type="Button" parent="Buttons/VBoxContainer"]
visible = false
margin_top = 20.0
margin_right = 87.0
margin_bottom = 35.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Themes"

[node name="CustomizePlayer" type="Button" parent="Buttons/VBoxContainer"]
margin_top = 20.0
margin_right = 97.0
margin_bottom = 35.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Customize the player"

[node name="CustomizeBG" type="Button" parent="Buttons/VBoxContainer"]
margin_top = 40.0
margin_right = 97.0
margin_bottom = 55.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Customize the background"

[node name="HSeparator3" type="HSeparator" parent="Buttons/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 60.0
margin_right = 97.0
margin_bottom = 71.0
custom_constants/separation = 11

[node name="Label" type="Label" parent="Buttons/VBoxContainer"]
margin_top = 76.0
margin_right = 97.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 3 )
text = "Shadow opacity:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShadowSlider" type="HSlider" parent="Buttons/VBoxContainer"]
margin_top = 86.0
margin_right = 97.0
margin_bottom = 94.0
custom_icons/grabber_disabled = ExtResource( 5 )
custom_icons/grabber_highlight = ExtResource( 4 )
custom_icons/grabber = ExtResource( 5 )
custom_styles/slider = SubResource( 4 )
custom_styles/grabber_area_highlight = SubResource( 5 )
custom_styles/grabber_area = SubResource( 6 )
max_value = 1.0
step = 0.001
value = 0.862
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator2" type="HSeparator" parent="Buttons/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 99.0
margin_right = 97.0
margin_bottom = 129.0
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reset" type="Button" parent="Buttons/VBoxContainer"]
margin_top = 134.0
margin_right = 97.0
margin_bottom = 149.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Reset to default"

[node name="Print Colors" type="Button" parent="Buttons/VBoxContainer"]
visible = false
margin_top = 40.0
margin_right = 87.0
margin_bottom = 55.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "print colors"

[node name="RandomiseColor" type="Button" parent="Buttons/VBoxContainer"]
visible = false
margin_top = 20.0
margin_right = 87.0
margin_bottom = 35.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Random"

[node name="Back" type="Button" parent="Buttons/VBoxContainer"]
visible = false
margin_top = 134.0
margin_right = 97.0
margin_bottom = 149.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "<- Back"

[node name="t2" type="Button" parent="Buttons/VBoxContainer"]
visible = false
margin_top = 60.0
margin_right = 87.0
margin_bottom = 75.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Default"

[node name="t3" type="Button" parent="Buttons/VBoxContainer"]
visible = false
margin_right = 87.0
margin_bottom = 15.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Zomorrod"

[node name="t4" type="Button" parent="Buttons/VBoxContainer"]
visible = false
margin_right = 87.0
margin_bottom = 15.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Dracula"

[node name="t5" type="Button" parent="Buttons/VBoxContainer"]
visible = false
margin_right = 87.0
margin_bottom = 15.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Cloud & Sky"

[node name="t6" type="Button" parent="Buttons/VBoxContainer"]
visible = false
margin_right = 87.0
margin_bottom = 15.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "YB"

[node name="t7" type="Button" parent="Buttons/VBoxContainer"]
visible = false
margin_right = 87.0
margin_bottom = 15.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Invisible"

[node name="HSeparator" type="HSeparator" parent="Buttons/VBoxContainer"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_top = 60.0
margin_right = 87.0
margin_bottom = 68.0
custom_constants/separation = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Buttons/VBoxContainer"]
visible = false
margin_top = 114.0
margin_right = 97.0
margin_bottom = 180.0
custom_constants/separation = 22

[node name="TouchScreenButton" type="TouchScreenButton" parent="Buttons/VBoxContainer/VBoxContainer"]
position = Vector2( -10.866, -4.43704 )
z_index = 4096
shape = SubResource( 7 )

[node name="HBoxContainer" type="HBoxContainer" parent="Buttons/VBoxContainer/VBoxContainer"]
margin_right = 97.0

[node name="Control" type="Control" parent="Buttons/VBoxContainer/VBoxContainer/HBoxContainer"]

[node name="Label" type="Label" parent="Buttons/VBoxContainer/VBoxContainer/HBoxContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.62234
margin_top = -3.57785
margin_right = 8.37766
margin_bottom = 1.42215
custom_fonts/font = SubResource( 3 )
text = "color shift:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="Buttons/VBoxContainer/VBoxContainer/HBoxContainer/Control"]
margin_left = -3.67882
margin_right = 92.3212
margin_bottom = 16.0
custom_icons/grabber_disabled = ExtResource( 5 )
custom_icons/grabber_highlight = ExtResource( 4 )
custom_icons/grabber = ExtResource( 5 )
custom_styles/slider = SubResource( 4 )
custom_styles/grabber_area_highlight = SubResource( 5 )
custom_styles/grabber_area = SubResource( 6 )
max_value = 1.0
step = 0.001
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="Buttons/VBoxContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 97.0
margin_bottom = 22.0

[node name="Control" type="Control" parent="Buttons/VBoxContainer/VBoxContainer/HBoxContainer2"]

[node name="Label" type="Label" parent="Buttons/VBoxContainer/VBoxContainer/HBoxContainer2/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.62234
margin_top = -3.57785
margin_right = 18.3777
margin_bottom = 1.42215
custom_fonts/font = SubResource( 3 )
text = "saturation:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SSlider" type="HSlider" parent="Buttons/VBoxContainer/VBoxContainer/HBoxContainer2/Control"]
margin_left = -3.67882
margin_right = 92.3212
margin_bottom = 16.0
custom_icons/grabber_disabled = ExtResource( 5 )
custom_icons/grabber_highlight = ExtResource( 4 )
custom_icons/grabber = ExtResource( 5 )
custom_styles/slider = SubResource( 4 )
custom_styles/grabber_area_highlight = SubResource( 5 )
custom_styles/grabber_area = SubResource( 6 )
max_value = 1.0
step = 0.001
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer3" type="HBoxContainer" parent="Buttons/VBoxContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 97.0
margin_bottom = 44.0

[node name="Control" type="Control" parent="Buttons/VBoxContainer/VBoxContainer/HBoxContainer3"]

[node name="Label" type="Label" parent="Buttons/VBoxContainer/VBoxContainer/HBoxContainer3/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.62234
margin_top = -3.57785
margin_right = 20.3777
margin_bottom = 1.42215
custom_fonts/font = SubResource( 3 )
text = "brightness:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LSlider" type="HSlider" parent="Buttons/VBoxContainer/VBoxContainer/HBoxContainer3/Control"]
margin_left = -3.67882
margin_right = 92.3212
margin_bottom = 16.0
custom_icons/grabber_disabled = ExtResource( 5 )
custom_icons/grabber_highlight = ExtResource( 4 )
custom_icons/grabber = ExtResource( 5 )
custom_styles/slider = SubResource( 4 )
custom_styles/grabber_area_highlight = SubResource( 5 )
custom_styles/grabber_area = SubResource( 6 )
max_value = 1.0
step = 0.001
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer4" type="HBoxContainer" parent="Buttons/VBoxContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 97.0
margin_bottom = 66.0

[node name="Control" type="Control" parent="Buttons/VBoxContainer/VBoxContainer/HBoxContainer4"]

[node name="Label" type="Label" parent="Buttons/VBoxContainer/VBoxContainer/HBoxContainer4/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.62234
margin_top = -3.57785
margin_right = 13.3777
margin_bottom = 1.42215
custom_fonts/font = SubResource( 3 )
text = "opacity:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ASlider" type="HSlider" parent="Buttons/VBoxContainer/VBoxContainer/HBoxContainer4/Control"]
margin_left = -3.67882
margin_right = 92.3212
margin_bottom = 16.0
custom_icons/grabber_disabled = ExtResource( 5 )
custom_icons/grabber_highlight = ExtResource( 4 )
custom_icons/grabber = ExtResource( 5 )
custom_styles/slider = SubResource( 4 )
custom_styles/grabber_area_highlight = SubResource( 5 )
custom_styles/grabber_area = SubResource( 6 )
max_value = 1.0
step = 0.001
__meta__ = {
"_edit_use_anchors_": false
}

[node name="checkboxes" type="Control" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -206.0
margin_top = -40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="checkboxes"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox2" type="CheckBox" parent="checkboxes/HBoxContainer"]
margin_left = 40.0
margin_right = 72.0
margin_bottom = 40.0
custom_icons/radio_checked = ExtResource( 6 )
custom_icons/checked = ExtResource( 6 )
custom_icons/radio_unchecked = ExtResource( 7 )
custom_icons/unchecked = ExtResource( 7 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 8 )
custom_styles/hover_pressed = SubResource( 8 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 2 )
text = "Glass"

[node name="CheckBox3" type="CheckBox" parent="checkboxes/HBoxContainer"]
margin_left = 82.0
margin_right = 127.0
margin_bottom = 40.0
custom_icons/radio_checked = ExtResource( 6 )
custom_icons/checked = ExtResource( 6 )
custom_icons/radio_unchecked = ExtResource( 7 )
custom_icons/unchecked = ExtResource( 7 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 8 )
custom_styles/hover_pressed = SubResource( 8 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 2 )
text = "Particles"

[node name="CheckBox4" type="CheckBox" parent="checkboxes/HBoxContainer"]
margin_left = 137.0
margin_right = 166.0
margin_bottom = 40.0
custom_icons/radio_checked = ExtResource( 6 )
custom_icons/checked = ExtResource( 6 )
custom_icons/radio_unchecked = ExtResource( 7 )
custom_icons/unchecked = ExtResource( 7 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 8 )
custom_styles/hover_pressed = SubResource( 8 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 2 )
text = "Light"

[node name="Label" type="Label" parent="checkboxes"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 9 )
text = "Select the part you want to change the color of"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CustomizeBGContainer" parent="." instance=ExtResource( 8 )]
visible = false

[node name="BackFromBG" type="Button" parent="CustomizeBGContainer/Buttons/VBoxContainer" index="0"]
visible = false
margin_top = 40.0
margin_right = 97.0
margin_bottom = 55.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "<- Back"
[connection signal="pressed" from="Buttons/VBoxContainer/BackToMenu" to="." method="_on_BackToMenu_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/BackFromPlayer" to="." method="_on_BackFromPlayer_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/Themes" to="." method="_on_Themes_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/CustomizePlayer" to="." method="_on_CustomizePlayer_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/CustomizeBG" to="." method="_on_CustomizeBG_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/Reset" to="." method="_on_Reset_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/Print Colors" to="." method="_on_Themes2_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/RandomiseColor" to="." method="_on_RandomiseColor_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/t2" to="." method="_on_t2_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/t3" to="." method="_on_t3_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/t4" to="." method="_on_t4_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/t5" to="." method="_on_t5_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/t6" to="." method="_on_t6_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/t7" to="." method="_on_t7_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/VBoxContainer/TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="pressed" from="CustomizeBGContainer/Buttons/VBoxContainer/BackFromBG" to="." method="_on_BackFromBG_pressed"]

[editable path="CustomizeBGContainer"]
